--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "RustBucket"
+name = "rust_bucket"
 version = "0.1.0"
-authors = ["Luke De Mouy", "Beta Wolfpup]
+authors = ["Luke De Mouy", "Beta Wolfpup"]
 
 [dependencies]
