--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "rust_bucket"
 version = "0.1.0"
 authors = ["Luke De Mouy", "Beta Wolfpup"]
+description = "Telegram Bot"
+license = "2-Clause BSD"
+keywords = ["Telegram", "Bot"]
 
 [dependencies]
